--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
-pring:
-  jpa:
-    properties:
-      hibernate:
-        format_sql: true
-spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    password: root
-    url: jdbc:mysql://localhost:3307/listaapi
-    username: root
-    validationQuerry: SELECT 1
-  jpa:
-    hibernate:
-      ddl-auto: update
-      dialect: org.hibernate.dialect.MySQLDialect
-      naming-strategy: org.hibernate.cfg.ImproveNamingStrategy
-    properties:
-      hibernate:
-        show_sql: true
-    show-sql: false
+version: "3.1"
+services:
+  db:
+    image: mysql:8.2.0
+    volumes:
+      - dbbase:/var/lib/mysql
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: listaapi
+
+volumes:
+  dbbase:
